// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-timepicker-beta #render intervals should render component as expected (1) 1`] = `
<gux-form-field-timepicker-beta interval="15">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div aria-disabled="false" class="gux-timepicker">
            <div class="gux-input-time">
              <input aria-label="Input hours" class="gux-input-time-hours" max="12" min="1" type="number" value="12">
              <span class="gux-time-separator">
                :
              </span>
              <input aria-label="Input minutes" class="gux-input-time-minutes" max="59" min="00" type="number" value="00">
              <button aria-label="AM selected, click to toggle" class="gux-input-time-am-pm-selector" type="button">
                AM
              </button>
              <button aria-label="Toggle suggested times" class="gux-clock-button" type="button">
                <gux-icon decorative="" icon-name="clock-outline"></gux-icon>
              </button>
            </div>
            <div aria-label="Time options open: false" class="gux-time-options">
              <div class="gux-time-options-list">
                <gux-option class="gux-time-option" tabindex="0" title="12:00" value="12:00">
                  12:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="12:15" value="12:15">
                  12:15
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="12:30" value="12:30">
                  12:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="12:45" value="12:45">
                  12:45
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="1:00" value="1:00">
                  1:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="1:15" value="1:15">
                  1:15
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="1:30" value="1:30">
                  1:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="1:45" value="1:45">
                  1:45
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="2:00" value="2:00">
                  2:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="2:15" value="2:15">
                  2:15
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="2:30" value="2:30">
                  2:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="2:45" value="2:45">
                  2:45
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="3:00" value="3:00">
                  3:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="3:15" value="3:15">
                  3:15
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="3:30" value="3:30">
                  3:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="3:45" value="3:45">
                  3:45
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="4:00" value="4:00">
                  4:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="4:15" value="4:15">
                  4:15
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="4:30" value="4:30">
                  4:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="4:45" value="4:45">
                  4:45
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="5:00" value="5:00">
                  5:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="5:15" value="5:15">
                  5:15
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="5:30" value="5:30">
                  5:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="5:45" value="5:45">
                  5:45
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="6:00" value="6:00">
                  6:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="6:15" value="6:15">
                  6:15
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="6:30" value="6:30">
                  6:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="6:45" value="6:45">
                  6:45
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="7:00" value="7:00">
                  7:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="7:15" value="7:15">
                  7:15
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="7:30" value="7:30">
                  7:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="7:45" value="7:45">
                  7:45
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="8:00" value="8:00">
                  8:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="8:15" value="8:15">
                  8:15
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="8:30" value="8:30">
                  8:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="8:45" value="8:45">
                  8:45
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="9:00" value="9:00">
                  9:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="9:15" value="9:15">
                  9:15
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="9:30" value="9:30">
                  9:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="9:45" value="9:45">
                  9:45
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="10:00" value="10:00">
                  10:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="10:15" value="10:15">
                  10:15
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="10:30" value="10:30">
                  10:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="10:45" value="10:45">
                  10:45
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="11:00" value="11:00">
                  11:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="11:15" value="11:15">
                  11:15
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="11:30" value="11:30">
                  11:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="11:45" value="11:45">
                  11:45
                </gux-option>
              </div>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input id="gux-form-field-input-i" slot="input" type="time">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-timepicker-beta>
`;

exports[`gux-form-field-timepicker-beta #render intervals should render component as expected (2) 1`] = `
<gux-form-field-timepicker-beta interval="30">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div aria-disabled="false" class="gux-timepicker">
            <div class="gux-input-time">
              <input aria-label="Input hours" class="gux-input-time-hours" max="12" min="1" type="number" value="12">
              <span class="gux-time-separator">
                :
              </span>
              <input aria-label="Input minutes" class="gux-input-time-minutes" max="59" min="00" type="number" value="00">
              <button aria-label="AM selected, click to toggle" class="gux-input-time-am-pm-selector" type="button">
                AM
              </button>
              <button aria-label="Toggle suggested times" class="gux-clock-button" type="button">
                <gux-icon decorative="" icon-name="clock-outline"></gux-icon>
              </button>
            </div>
            <div aria-label="Time options open: false" class="gux-time-options">
              <div class="gux-time-options-list">
                <gux-option class="gux-time-option" tabindex="0" title="12:00" value="12:00">
                  12:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="12:30" value="12:30">
                  12:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="1:00" value="1:00">
                  1:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="1:30" value="1:30">
                  1:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="2:00" value="2:00">
                  2:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="2:30" value="2:30">
                  2:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="3:00" value="3:00">
                  3:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="3:30" value="3:30">
                  3:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="4:00" value="4:00">
                  4:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="4:30" value="4:30">
                  4:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="5:00" value="5:00">
                  5:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="5:30" value="5:30">
                  5:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="6:00" value="6:00">
                  6:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="6:30" value="6:30">
                  6:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="7:00" value="7:00">
                  7:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="7:30" value="7:30">
                  7:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="8:00" value="8:00">
                  8:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="8:30" value="8:30">
                  8:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="9:00" value="9:00">
                  9:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="9:30" value="9:30">
                  9:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="10:00" value="10:00">
                  10:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="10:30" value="10:30">
                  10:30
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="11:00" value="11:00">
                  11:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="11:30" value="11:30">
                  11:30
                </gux-option>
              </div>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input id="gux-form-field-input-i" slot="input" type="time">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-timepicker-beta>
`;

exports[`gux-form-field-timepicker-beta #render intervals should render component as expected (3) 1`] = `
<gux-form-field-timepicker-beta interval="60">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div aria-disabled="false" class="gux-timepicker">
            <div class="gux-input-time">
              <input aria-label="Input hours" class="gux-input-time-hours" max="12" min="1" type="number" value="12">
              <span class="gux-time-separator">
                :
              </span>
              <input aria-label="Input minutes" class="gux-input-time-minutes" max="59" min="00" type="number" value="00">
              <button aria-label="AM selected, click to toggle" class="gux-input-time-am-pm-selector" type="button">
                AM
              </button>
              <button aria-label="Toggle suggested times" class="gux-clock-button" type="button">
                <gux-icon decorative="" icon-name="clock-outline"></gux-icon>
              </button>
            </div>
            <div aria-label="Time options open: false" class="gux-time-options">
              <div class="gux-time-options-list">
                <gux-option class="gux-time-option" tabindex="0" title="12:00" value="12:00">
                  12:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="1:00" value="1:00">
                  1:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="2:00" value="2:00">
                  2:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="3:00" value="3:00">
                  3:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="4:00" value="4:00">
                  4:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="5:00" value="5:00">
                  5:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="6:00" value="6:00">
                  6:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="7:00" value="7:00">
                  7:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="8:00" value="8:00">
                  8:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="9:00" value="9:00">
                  9:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="10:00" value="10:00">
                  10:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="11:00" value="11:00">
                  11:00
                </gux-option>
              </div>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input id="gux-form-field-input-i" slot="input" type="time">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-timepicker-beta>
`;

exports[`gux-form-field-timepicker-beta #render label-position should render component as expected (1) 1`] = `
<gux-form-field-timepicker-beta>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div aria-disabled="false" class="gux-timepicker">
            <div class="gux-input-time">
              <input aria-label="Input hours" class="gux-input-time-hours" max="12" min="1" type="number" value="12">
              <span class="gux-time-separator">
                :
              </span>
              <input aria-label="Input minutes" class="gux-input-time-minutes" max="59" min="00" type="number" value="00">
              <button aria-label="AM selected, click to toggle" class="gux-input-time-am-pm-selector" type="button">
                AM
              </button>
              <button aria-label="Toggle suggested times" class="gux-clock-button" type="button">
                <gux-icon decorative="" icon-name="clock-outline"></gux-icon>
              </button>
            </div>
            <div aria-label="Time options open: false" class="gux-time-options">
              <div class="gux-time-options-list">
                <gux-option class="gux-time-option" tabindex="0" title="12:00" value="12:00">
                  12:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="1:00" value="1:00">
                  1:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="2:00" value="2:00">
                  2:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="3:00" value="3:00">
                  3:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="4:00" value="4:00">
                  4:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="5:00" value="5:00">
                  5:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="6:00" value="6:00">
                  6:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="7:00" value="7:00">
                  7:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="8:00" value="8:00">
                  8:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="9:00" value="9:00">
                  9:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="10:00" value="10:00">
                  10:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="11:00" value="11:00">
                  11:00
                </gux-option>
              </div>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input id="gux-form-field-input-i" slot="input" type="time">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-timepicker-beta>
`;

exports[`gux-form-field-timepicker-beta #render label-position should render component as expected (2) 1`] = `
<gux-form-field-timepicker-beta label-position="above">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div aria-disabled="false" class="gux-timepicker">
            <div class="gux-input-time">
              <input aria-label="Input hours" class="gux-input-time-hours" max="12" min="1" type="number" value="12">
              <span class="gux-time-separator">
                :
              </span>
              <input aria-label="Input minutes" class="gux-input-time-minutes" max="59" min="00" type="number" value="00">
              <button aria-label="AM selected, click to toggle" class="gux-input-time-am-pm-selector" type="button">
                AM
              </button>
              <button aria-label="Toggle suggested times" class="gux-clock-button" type="button">
                <gux-icon decorative="" icon-name="clock-outline"></gux-icon>
              </button>
            </div>
            <div aria-label="Time options open: false" class="gux-time-options">
              <div class="gux-time-options-list">
                <gux-option class="gux-time-option" tabindex="0" title="12:00" value="12:00">
                  12:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="1:00" value="1:00">
                  1:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="2:00" value="2:00">
                  2:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="3:00" value="3:00">
                  3:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="4:00" value="4:00">
                  4:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="5:00" value="5:00">
                  5:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="6:00" value="6:00">
                  6:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="7:00" value="7:00">
                  7:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="8:00" value="8:00">
                  8:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="9:00" value="9:00">
                  9:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="10:00" value="10:00">
                  10:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="11:00" value="11:00">
                  11:00
                </gux-option>
              </div>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input id="gux-form-field-input-i" slot="input" type="time">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-timepicker-beta>
`;

exports[`gux-form-field-timepicker-beta #render label-position should render component as expected (3) 1`] = `
<gux-form-field-timepicker-beta label-position="beside">
  <mock:shadow-root>
    <div class="gux-beside gux-form-field-container">
      <div class="gux-beside gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div aria-disabled="false" class="gux-timepicker">
            <div class="gux-input-time">
              <input aria-label="Input hours" class="gux-input-time-hours" max="12" min="1" type="number" value="12">
              <span class="gux-time-separator">
                :
              </span>
              <input aria-label="Input minutes" class="gux-input-time-minutes" max="59" min="00" type="number" value="00">
              <button aria-label="AM selected, click to toggle" class="gux-input-time-am-pm-selector" type="button">
                AM
              </button>
              <button aria-label="Toggle suggested times" class="gux-clock-button" type="button">
                <gux-icon decorative="" icon-name="clock-outline"></gux-icon>
              </button>
            </div>
            <div aria-label="Time options open: false" class="gux-time-options">
              <div class="gux-time-options-list">
                <gux-option class="gux-time-option" tabindex="0" title="12:00" value="12:00">
                  12:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="1:00" value="1:00">
                  1:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="2:00" value="2:00">
                  2:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="3:00" value="3:00">
                  3:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="4:00" value="4:00">
                  4:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="5:00" value="5:00">
                  5:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="6:00" value="6:00">
                  6:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="7:00" value="7:00">
                  7:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="8:00" value="8:00">
                  8:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="9:00" value="9:00">
                  9:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="10:00" value="10:00">
                  10:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="11:00" value="11:00">
                  11:00
                </gux-option>
              </div>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input id="gux-form-field-input-i" slot="input" type="time">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-timepicker-beta>
`;

exports[`gux-form-field-timepicker-beta #render label-position should render component as expected (4) 1`] = `
<gux-form-field-timepicker-beta label-position="screenreader">
  <mock:shadow-root>
    <div class="gux-form-field-container gux-screenreader">
      <div class="gux-form-field-label gux-screenreader">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div aria-disabled="false" class="gux-timepicker">
            <div class="gux-input-time">
              <input aria-label="Input hours" class="gux-input-time-hours" max="12" min="1" type="number" value="12">
              <span class="gux-time-separator">
                :
              </span>
              <input aria-label="Input minutes" class="gux-input-time-minutes" max="59" min="00" type="number" value="00">
              <button aria-label="AM selected, click to toggle" class="gux-input-time-am-pm-selector" type="button">
                AM
              </button>
              <button aria-label="Toggle suggested times" class="gux-clock-button" type="button">
                <gux-icon decorative="" icon-name="clock-outline"></gux-icon>
              </button>
            </div>
            <div aria-label="Time options open: false" class="gux-time-options">
              <div class="gux-time-options-list">
                <gux-option class="gux-time-option" tabindex="0" title="12:00" value="12:00">
                  12:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="1:00" value="1:00">
                  1:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="2:00" value="2:00">
                  2:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="3:00" value="3:00">
                  3:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="4:00" value="4:00">
                  4:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="5:00" value="5:00">
                  5:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="6:00" value="6:00">
                  6:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="7:00" value="7:00">
                  7:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="8:00" value="8:00">
                  8:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="9:00" value="9:00">
                  9:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="10:00" value="10:00">
                  10:00
                </gux-option>
                <gux-option class="gux-time-option" tabindex="0" title="11:00" value="11:00">
                  11:00
                </gux-option>
              </div>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input id="gux-form-field-input-i" slot="input" type="time">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-timepicker-beta>
`;
